<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2026_04_17_03_00_00"
                android:textColor="#222222"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtForecastDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/light_rain"
                android:textColor="#777777"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtForecastTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_27_02_c"
            android:textColor="#5E35B1"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>